Fixed dashboard url

--- a/Klinik.Web/Views/Home/Index.cshtml
+++ b/Klinik.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="plan most-popular">
                 <div class="plan-ribbon-wrapper"></div>
                 <h3>Poli Umum<span>15</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterUmum">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/PoliUmum">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Ahmad / Dr Yuni</li>
@@ -20,7 +20,7 @@
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli Gigi<span>6</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterGigi">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/PoliGigi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Yulia / Dr AManda</li>
@@ -31,7 +31,7 @@
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli Kulit<span>7</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterKulit">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/PoliKulit">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Budi / Dr Santoso</li>
@@ -42,7 +42,7 @@
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli THT<span>4</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterTHT">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/PoliTHT">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Bambang / Dr Aulia</li>
@@ -58,7 +58,7 @@
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Farmasi<span>14</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterFarmasi">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/Farmasi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Bpk Sumadi</li>
@@ -69,7 +69,7 @@
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Laboratorium<span>12</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterLab">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/Laboratorium">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Ibu Martini</li>
@@ -80,7 +80,7 @@
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Radiologi<span>13</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Registration/RegisterRadiologi">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Loket/Radiologi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Ibu Siti</li>
