--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -40,10 +40,11 @@
     <link href="~/Content/Octopus/assets/stylesheets/theme-custom.css" rel="stylesheet" />
 
     <!-- Head Libraries -->
+    @RenderSection("pdfcode", required: false)
     <script src="~/Scripts/jquery-3.0.0.js"></script>
     <script src="~/Content/Octopus/assets/vendor/Modernizr/modernizr.js"></script>
     <script src="~/Scripts/toastr.js"></script>
-
+    
     @RenderSection("Styles", required: false)
 
 </head>
