--- a/Klinik.Web/Views/Cashier/ListPatien.cshtml
+++ b/Klinik.Web/Views/Cashier/ListPatien.cshtml
@@ -11,7 +11,6 @@
         </div>
         <h5 class="panel-title">
             @Klinik.Resources.UIMessages.PatientList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
     <div class="panel-body">
@@ -108,7 +107,7 @@
                 { "data": "TypeDesc", "name": "TypeDesc", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Patient/CreateOrEditPatient?id=' + full.Id + '">@Klinik.Resources.UIMessages.Detail</a>  ' + ""; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Cashier/Detail?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.Detail</a>  ' + ' | <a class="btn btn-info" href="/Cashier/Invoice?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.SetRolePrivilege</a>'; }
                 }
             ]
         });
