--- a/Klinik.Web/Views/Cashier/ListPatien.cshtml
+++ b/Klinik.Web/Views/Cashier/ListPatien.cshtml
@@ -107,7 +107,7 @@
                 { "data": "TypeDesc", "name": "TypeDesc", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Cashier/Detail?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.Detail</a>  ' + ' | <a class="btn btn-info" href="/Cashier/Invoice?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.SetRolePrivilege</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Cashier/Detail?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.Update</a>  ' + ' | <a class="btn btn-info" href="/Cashier/Invoice?patienid=' + full.Id + '">@Klinik.Resources.UIMessages.Invoice</a>'; }
                 }
             ]
         });
