--- a/Klinik.Web/Views/Cashier/Invoice.cshtml
+++ b/Klinik.Web/Views/Cashier/Invoice.cshtml
@@ -30,14 +30,14 @@
                     {
                         <tr>
                             <td>@item.ItemName</td>
-                            <td>RP. @item.Price</td>
+                            <td>RP. @string.Format("{0:N}", Convert.ToInt32(item.Price))</td>
                         </tr>
                     }
                 </tbody>
                 <tfoot>
                     <tr>
                         <td></td>
-                        <td>Rp. @ViewBag.sum</td>
+                        <td>Rp. @string.Format("{0:N}", Convert.ToInt32(ViewBag.sum))</td>
                     </tr>
                 </tfoot>
             </table>
@@ -54,9 +54,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>@Model.TotalPrice</td>
+                        <td>Rp @string.Format("{0:N}", Convert.ToInt32(Model.TotalPrice))</td>
                         <td>@Model.DiscountPercent</td>
-                        <td>@Model.DiscountAmount</td>
+                        <td>Rp. @string.Format("{0:N}", Convert.ToInt32(Model.DiscountAmount))</td>
                         <td>@Model.Remark</td>
                     </tr>
                 </tbody>
@@ -66,7 +66,7 @@
             <table class="table">
                 <tr>
                     <th>Total Price</th>
-                    <td>Rp. @ViewBag.Total</td>
+                    <td>Rp. @string.Format("{0:N}", Convert.ToInt32(ViewBag.Total))</td>
                 </tr>
             </table>
         </div>
@@ -95,7 +95,7 @@
                         width: 750
                     }]
                 };
-                pdfMake.createPdf(docDefinition).download("Table.pdf");
+                pdfMake.createPdf(docDefinition).download("@ViewBag.PatienName"+".pdf");
             }
         });
     });
