--- a/Klinik.Web/Views/Cashier/Detail.cshtml
+++ b/Klinik.Web/Views/Cashier/Detail.cshtml
@@ -50,12 +50,12 @@
             </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Discount Amount</label>
-                    @Html.TextBoxFor(x => x.DiscountAmount, new { @class = "form-control", @id = "tbCode" })
+                    @Html.TextBoxFor(x => x.DiscountAmount, new { @class = "form-control", @id = "discountamount" })
                     @Html.ValidationMessageFor(m => m.DiscountAmount, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Discount Percent</label>
-                    @Html.TextBoxFor(x => x.DiscountPercent, new { @class = "form-control", @id = "tbCode" })
+                    @Html.TextBoxFor(x => x.DiscountPercent, new { @class = "form-control", @id = "discountpercent" })
                     @Html.ValidationMessageFor(m => m.DiscountPercent, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
