--- a/Klinik.Web/Views/PreExamine/CreateOrEditPreExamine.cshtml
+++ b/Klinik.Web/Views/PreExamine/CreateOrEditPreExamine.cshtml
@@ -55,12 +55,11 @@
                     <div class="col-md-2">
                         @Html.TextBoxFor(x => x.Height, new { @class = "form-control", @id = "tbHeight" })
                     </div>
-
                 </div>
                 <div class="form-group">
                     <label class="col-md-1 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Respiratory</label>
                     <div class="col-md-2">
-                        @Html.TextBoxFor(x => x.Respitory, new { @class = "form-control", @id = "tbRespiratory" })
+                        @Html.TextBoxFor(x => x.Respiratory, new { @class = "form-control", @id = "tbRespiratory" })
                     </div>
                     <label class="col-md-1 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Diastolic</label>
                     <div class="col-md-2">
