--- a/Klinik.Web/Views/Poli/FormExamine.cshtml
+++ b/Klinik.Web/Views/Poli/FormExamine.cshtml
@@ -248,7 +248,7 @@
                                     <div class="form-group">
                                         <label class="col-md-1 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Respiratory</label>
                                         <div class="col-md-2">
-                                            @Html.TextBoxFor(x => x.PreExamineData.Respitory, new { @class = "form-control", @id = "tbRespiratory" })
+                                            @Html.TextBoxFor(x => x.PreExamineData.Respiratory, new { @class = "form-control", @id = "tbRespiratory" })
                                         </div>
                                         <label class="col-md-1 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Diastolic</label>
                                         <div class="col-md-2">
