Renamed to pharmacy

--- a/Klinik.Web/Views/Home/Index.cshtml
+++ b/Klinik.Web/Views/Home/Index.cshtml
@@ -57,8 +57,8 @@
     <div class="pricing-table">
         <div class="col-lg-4">
             <div class="plan">
-                <h3>Farmasi<span>14</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Loket/Farmasi">Register</a>
+                <h3>Pharmacy<span>14</span></h3>
+                <a class="btn btn-lg btn-primary" href="/Loket/Pharmacy">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Bpk Sumadi</li>
