--- a/Klinik.Web/Views/Loket/Edit.cshtml
+++ b/Klinik.Web/Views/Loket/Edit.cshtml
@@ -204,7 +204,7 @@
             } else if (poliID == 11) {
                 window.location.href = "/Loket/Laboratorium";
             } else if (poliID == 12) {
-                window.location.href = "/Loket/Farmasi";
+                window.location.href = "/Loket/Pharmacy";
             } else if (poliID == 13) {
                 window.location.href = "/Loket/RekamMedis";
             } else if (poliID == 14) {
